# stanford-IntroToML-ee104

./: LICENSE  README.md  pyproject.toml
ee104/: __init__.py
ee104/hw1/: __init__.py  knearestneighbor.py  softnearestneighbor.py
ee104/hw2/: __init__.py  rms.py  softnearestneighbor.py
homework/: hw1.ipynb  hw2.ipynb
homework/hw1/: answers.md  run_3.py
homework/hw2/: feat_valid.json  run_5.py
