[project]
name = "EE104"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simone Licciardi", email = "simone.licciardi@outlook.com"},
]
dependencies = [
    "numpy>=2.1.0",
    "matplotlib>=3.9.2",
    "jupyter>=1.1.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
